--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
 </head>
 <body>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="c">
+    <img class="c__img-code" alt="QR code" src="./images/image-qr-code.png"/>
+    <h1 class="c__title">Improve your front-end skills by building projects</h1>
+    <p class="c__body">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
+  
 </body>
 </html>
