--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
   <div class="c">
     <img class="c__img-code" alt="QR code" src="./images/image-qr-code.png"/>
-    <h1 class="c__title">Improve your front-end skills by building projects</h1>
-    <p class="c__body">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <div class="c__content">
+      <h1 class="c__title">Improve your front-end skills by building projects</h1>
+      <p class="c__body">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
   </div>
   
 </body>
